--- a/src/App.css
+++ b/src/App.css
@@ -608,6 +608,7 @@ button:focus {
 }
 
 .btn-primary {
+  text-decoration: none !important;
   color: black !important;
   background-color: white !important;
   border-color: white !important;
